libs/schema/schema-grammar.output
Nonterminals useless in grammar

   physical_stmts_1_0
   physical_stmt_1_0


Terminals unused in grammar

   UNRECOGNIZED
   INCREMENT
   UNTERM_STRING
   UNTERM_ESCAPED_STRING
   KW_virtual


Rules useless in grammar

  245 physical_stmts_1_0: physical_stmt_1_0
  246                   | physical_stmts_1_0 physical_stmt_1_0

  247 physical_stmt_1_0: KW_read '=' cond_expr_1_0
  248                  | KW_read INCREMENT cond_expr_1_0
  249                  | KW_write '=' cond_expr_1_0
  250                  | KW_write INCREMENT cond_expr_1_0
  251                  | KW___untyped '=' untyped_tbl_expr_1_0


Grammar

    0 $accept: parse "end of source"

    1 parse: "end of source"
    2      | source "end of source"

    3 source: schema_1_0
    4       | version_1_0 schema_1_0
    5       | version_2_x schema_2_x

    6 version_1_0: KW_version VERS_1_0 ';'

    7 version_2_x: KW_version FLOAT ';'

    8 schema_2_x: '$'

    9 schema_1_0: schema_1_0_decl_seq

   10 schema_1_0_decl_seq: schema_1_0_decl
   11                    | schema_1_0_decl_seq schema_1_0_decl

   12 schema_1_0_decl: typedef_1_0_decl
   13                | typeset_1_0_decl
   14                | format_1_0_decl
   15                | const_1_0_decl
   16                | alias_1_0_decl
   17                | extern_1_0_decl
   18                | function_1_0_decl
   19                | script_1_0_decl
   20                | validate_1_0_decl
   21                | physical_1_0_decl
   22                | table_1_0_decl
   23                | database_1_0_decl
   24                | include_directive
   25                | ';'

   26 script_1_0_decl: KW_schema func_1_0_decl
   27                | KW_schema KW_function func_1_0_decl

   28 validate_1_0_decl: KW_validate function_1_0_decl

   29 include_directive: KW_include STRING

   30 typedef_1_0_decl: KW_typedef fqn_1_0 typedef_1_0_new_name_list ';'

   31 typedef_1_0_new_name_list: typedef_1_0_new_name
   32                          | typedef_1_0_new_name_list ',' typedef_1_0_new_name

   33 typedef_1_0_new_name: fqn_1_0
   34                     | fqn_1_0 dim_1_0

   35 typeset_1_0_decl: KW_typeset typeset_1_0_new_name typeset_1_0_def ';'

   36 typeset_1_0_new_name: fqn_1_0

   37 typeset_1_0_def: '{' typespec_1_0_list '}'

   38 typespec_1_0_list: typespec_1_0
   39                  | typespec_1_0_list ',' typespec_1_0

   40 typespec_1_0: typespec_1_0_name
   41             | typespec_1_0_name dim_1_0

   42 typespec_1_0_name: fqn_1_0

   43 format_1_0_decl: KW_fmtdef format_1_0_new_name ';'
   44                | KW_fmtdef format_1_0_name format_1_0_new_name ';'

   45 format_1_0_new_name: fqn_1_0

   46 format_1_0_name: fqn_1_0

   47 const_1_0_decl: KW_const fqn_1_0 const_1_0_new_name '=' expression_1_0 ';'
   48               | KW_const fqn_1_0 dim_1_0 const_1_0_new_name '=' expression_1_0 ';'

   49 const_1_0_new_name: fqn_1_0

   50 alias_1_0_decl: KW_alias fqn_1_0 alias_1_0_new_name ';'

   51 alias_1_0_new_name: fqn_1_0

   52 extern_1_0_decl: KW_extern ext_func_1_0_decl

   53 ext_func_1_0_decl: function_1_0_decl

   54 function_1_0_decl: KW_function func_1_0_decl ';'

   55 func_1_0_decl: untyped_func_1_0_decl
   56              | row_length_func_1_0_decl
   57              | opt_func_1_0_schema_sig func_1_0_return_type func_1_0_new_name opt_func_1_0_fact_sig func_1_0_param_sig func_1_0_prologue

   58 untyped_func_1_0_decl: KW___untyped func_1_0_new_name '(' ')'

   59 row_length_func_1_0_decl: KW___row_length func_1_0_new_name '(' ')'

   60 func_1_0_new_name: fqn_1_0
   61                  | fqn_1_0 VERSION

   62 opt_func_1_0_schema_sig: %empty
   63                        | func_1_0_schema_sig

   64 func_1_0_schema_sig: '<' func_1_0_schema_formals '>'

   65 func_1_0_schema_formals: func_1_0_schema_formal
   66                        | func_1_0_schema_formals ',' func_1_0_schema_formal

   67 func_1_0_schema_formal: KW_type ident_1_0
   68                       | type_expr_1_0 ident_1_0

   69 func_1_0_return_type: KW_void
   70                     | vardim_type_expr_1_0

   71 opt_func_1_0_fact_sig: %empty
   72                      | func_1_0_fact_sig

   73 func_1_0_fact_sig: '<' func_1_0_param_signature '>'

   74 func_1_0_param_sig: '(' func_1_0_param_signature ')'

   75 func_1_0_param_signature: %empty
   76                         | func_1_0_formal_params func_1_0_vararg_formals
   77                         | '*' func_1_0_formal_params func_1_0_vararg_formals
   78                         | func_1_0_formal_params '*' func_1_0_formal_params func_1_0_vararg_formals
   79                         | func_1_0_formal_params ',' '*' func_1_0_formal_params func_1_0_vararg_formals

   80 func_1_0_formal_params: formal_param_1_0
   81                       | func_1_0_formal_params ',' formal_param_1_0

   82 formal_param_1_0: opt_control_1_0 typespec_1_0 IDENTIFIER_1_0

   83 opt_control_1_0: %empty
   84                | KW_control

   85 func_1_0_vararg_formals: %empty
   86                        | ',' ELLIPSIS

   87 func_1_0_prologue: %empty
   88                  | '=' fqn_1_0
   89                  | '{' func_1_0_body '}'

   90 func_1_0_body: script_1_0_stmt_seq

   91 script_1_0_stmt_seq: script_1_0_stmt
   92                    | script_1_0_stmt_seq script_1_0_stmt

   93 script_1_0_stmt: KW_return cond_expr_1_0 ';'
   94                | production_1_0_stmt ';'

   95 production_1_0_stmt: fqn_1_0 '/' fqn_1_0 IDENTIFIER_1_0 assign_expr_1_0
   96                    | fqn_1_0 IDENTIFIER_1_0 assign_expr_1_0
   97                    | KW_trigger IDENTIFIER_1_0 assign_expr_1_0

   98 physical_1_0_decl: KW_physical phys_1_0_decl

   99 phys_1_0_decl: opt_func_1_0_schema_sig phys_1_0_return_type phys_1_0_new_name opt_func_1_0_fact_sig phys_1_0_prologue ';'

  100 phys_1_0_return_type: func_1_0_return_type
  101                     | KW___no_header func_1_0_return_type

  102 phys_1_0_new_name: fqn_1_0 VERSION

  103 phys_1_0_prologue: '=' phys_1_0_stmt
  104                  | '{' phys_1_0_body '}'

  105 phys_1_0_body: phys_1_0_body_stmt
  106              | phys_1_0_body phys_1_0_body_stmt

  107 phys_1_0_body_stmt: ';'
  108                   | KW_decode phys_1_0_stmt
  109                   | KW_encode phys_1_0_stmt
  110                   | KW___row_length '=' fqn_1_0 '(' ')'

  111 phys_1_0_stmt: '{' func_1_0_body '}'

  112 table_1_0_decl: KW_table new_tbl_1_0_name opt_tbl_1_0_parents tbl_1_0_body

  113 new_tbl_1_0_name: fqn_1_0 VERSION

  114 opt_tbl_1_0_parents: %empty
  115                    | '=' tbl_1_0_parents

  116 tbl_1_0_parents: tbl_1_0_parent
  117                | tbl_1_0_parents ',' tbl_1_0_parent

  118 tbl_1_0_parent: fqn_1_0
  119               | fqn_1_0 VERSION

  120 tbl_1_0_body: '{' tbl_1_0_stmt_seq '}'

  121 tbl_1_0_stmt_seq: tbl_1_0_stmt
  122                 | tbl_1_0_stmt_seq tbl_1_0_stmt

  123 tbl_1_0_stmt: production_1_0_stmt ';'
  124             | column_1_0_decl ';'
  125             | col_1_0_modifier_seq column_1_0_decl ';'
  126             | default_view_1_0_decl ';'
  127             | KW_static physmbr_1_0_decl ';'
  128             | KW_physical physmbr_1_0_decl ';'
  129             | KW_static KW_physical physmbr_1_0_decl ';'
  130             | KW___untyped untyped_tbl_expr_1_0 ';'

  131 col_1_0_modifier_seq: col_1_0_modifier
  132                     | col_1_0_modifier_seq col_1_0_modifier

  133 col_1_0_modifier: KW_default
  134                 | KW_extern
  135                 | KW_readonly

  136 column_1_0_decl: KW_column col_1_0_decl
  137                | KW_column KW_default col_1_0_decl
  138                | KW_column KW_limit '=' expression_1_0
  139                | KW_column KW_default KW_limit '=' expression_1_0

  140 col_1_0_decl: phys_encoding_expr_1_0 typespec_1_0 typed_column_decl_1_0

  141 phys_encoding_expr_1_0: %empty
  142                       | KW_physical '<' schema_parms_1_0 '>' ident_1_0 opt_version_1_0 opt_factory_parms_1_0
  143                       | '<' schema_parms_1_0 '>' ident_1_0 opt_version_1_0 opt_factory_parms_1_0

  144 typed_column_decl_1_0: ident_1_0 '{' column_body_1_0 '}'
  145                      | ident_1_0 '=' expression_1_0
  146                      | ident_1_0

  147 column_body_1_0: column_stmt_1_0
  148                | column_body_1_0 ';' column_stmt_1_0

  149 column_stmt_1_0: KW_read '=' cond_expr_1_0
  150                | KW_validate '=' cond_expr_1_0
  151                | KW_limit '=' uint_expr_1_0
  152                | ';'

  153 default_view_1_0_decl: KW_default KW_view STRING

  154 physmbr_1_0_decl: opt_KW_column phys_coldef_1_0 '.' ident_1_0 '=' cond_expr_1_0

  155 opt_KW_column: %empty
  156              | KW_column

  157 phys_coldef_1_0: opt_col_schema_parms_1_0 fqn_1_0 opt_version_1_0 opt_factory_parms_1_0

  158 opt_col_schema_parms_1_0: %empty
  159                         | '<' col_schema_parms_1_0 '>'

  160 col_schema_parms_1_0: col_schema_parm_1_0
  161                     | col_schema_parms_1_0 ',' col_schema_parm_1_0

  162 col_schema_parm_1_0: fqn_1_0 '=' col_schema_value_1_0
  163                    | col_schema_value_1_0

  164 col_schema_value_1_0: fqn_1_0
  165                     | uint_expr_1_0

  166 untyped_tbl_expr_1_0: '=' fqn_1_0 '(' ')'

  167 expression_1_0: uncast_expr_1_0
  168               | '(' type_expr_1_0 ')' expression_1_0

  169 uncast_expr_1_0: fqn_1_0
  170                | '.' IDENTIFIER_1_0
  171                | '@'
  172                | func_expr_1_0
  173                | uint_expr_1_0
  174                | float_expr_1_0
  175                | string_expr_1_0
  176                | const_vect_expr_1_0
  177                | bool_expr_1_0
  178                | negate_expr_1_0
  179                | '+' expression_1_0

  180 assign_expr_1_0: '=' cond_expr_1_0

  181 func_expr_1_0: '<' schema_parms_1_0 '>' func_1_0_name opt_factory_parms_1_0 '(' opt_func_1_0_parms ')'
  182              | func_1_0_name opt_factory_parms_1_0 '(' opt_func_1_0_parms ')'

  183 schema_parms_1_0: schema_parm_1_0
  184                 | schema_parms_1_0 ',' schema_parm_1_0

  185 schema_parm_1_0: fqn_1_0
  186                | fqn_1_0 '/' fqn_1_0
  187                | uint_expr_1_0

  188 func_1_0_name: fqn_1_0
  189              | fqn_1_0 VERSION

  190 opt_factory_parms_1_0: %empty
  191                      | '<' factory_parms_1_0 '>'

  192 factory_parms_1_0: factory_parm_1_0
  193                  | factory_parms_1_0 ',' factory_parm_1_0

  194 factory_parm_1_0: expression_1_0
  195                 | IDENTIFIER_1_0 '=' expression_1_0

  196 opt_func_1_0_parms: %empty
  197                   | func_1_0_parms

  198 func_1_0_parms: expression_1_0
  199               | func_1_0_parms ',' expression_1_0

  200 uint_expr_1_0: DECIMAL
  201              | HEX
  202              | OCTAL

  203 float_expr_1_0: FLOAT
  204               | EXP_FLOAT

  205 string_expr_1_0: STRING
  206                | ESCAPED_STRING

  207 const_vect_expr_1_0: '[' opt_const_vect_exprlist_1_0 ']'

  208 opt_const_vect_exprlist_1_0: %empty
  209                            | const_vect_exprlist_1_0

  210 const_vect_exprlist_1_0: expression_1_0
  211                        | const_vect_exprlist_1_0 ',' expression_1_0

  212 bool_expr_1_0: KW_true
  213              | KW_false

  214 negate_expr_1_0: '-' fqn_1_0
  215                | '-' uint_expr_1_0
  216                | '-' float_expr_1_0

  217 type_expr_1_0: fqn_1_0
  218              | fqn_1_0 '/' fqn_1_0

  219 database_1_0_decl: KW_database fqn_1_0 VERSION opt_database_dad_1_0 database_body_1_0

  220 opt_database_dad_1_0: %empty
  221                     | '=' fqn_1_0 opt_version_1_0

  222 database_body_1_0: '{' '}'
  223                  | '{' database_members_1_0 '}'

  224 database_members_1_0: database_member_1_0
  225                     | database_members_1_0 database_member_1_0

  226 database_member_1_0: opt_template_1_0 db_member_1_0
  227                    | opt_template_1_0 table_member_1_0
  228                    | ';'

  229 opt_template_1_0: %empty
  230                 | KW_template

  231 db_member_1_0: KW_database fqn_1_0 opt_version_1_0 IDENTIFIER_1_0 ';'

  232 table_member_1_0: KW_table fqn_1_0 opt_version_1_0 IDENTIFIER_1_0 ';'

  233 opt_version_1_0: %empty
  234                | VERSION

  235 vardim_type_expr_1_0: '[' '*' ']'
  236                     | type_expr_1_0

  237 fqn_1_0: ident_1_0
  238        | fqn_1_0 ':' ident_1_0
  239        | fqn_1_0 ':' KW_read
  240        | fqn_1_0 ':' KW_write

  241 ident_1_0: IDENTIFIER_1_0

  242 dim_1_0: '[' expression_1_0 ']'

  243 cond_expr_1_0: expression_1_0
  244              | cond_expr_1_0 '|' expression_1_0


Terminals, with rules where they appear

"end of source" (0) 0 1 2
'$' (36) 8
'(' (40) 58 59 74 110 166 168 181 182
')' (41) 58 59 74 110 166 168 181 182
'*' (42) 77 78 79 235
'+' (43) 179
',' (44) 32 39 66 79 81 86 117 161 184 193 199 211
'-' (45) 214 215 216
'.' (46) 154 170
'/' (47) 95 186 218
':' (58) 238 239 240
';' (59) 6 7 25 30 35 43 44 47 48 50 54 93 94 99 107 123 124 125 126
    127 128 129 130 148 152 228 231 232
'<' (60) 64 73 142 143 159 181 191
'=' (61) 47 48 88 103 110 115 138 139 145 149 150 151 154 162 166 180
    195 221
'>' (62) 64 73 142 143 159 181 191
'@' (64) 171
'[' (91) 207 235 242
']' (93) 207 235 242
'{' (123) 37 89 104 111 120 144 222 223
'|' (124) 244
'}' (125) 37 89 104 111 120 144 222 223
error (256)
UNRECOGNIZED (258)
ELLIPSIS (259) 86
INCREMENT (260)
DECIMAL (261) 200
OCTAL (262) 202
HEX (263) 201
FLOAT (264) 7 203
EXP_FLOAT (265) 204
STRING (266) 29 153 205
ESCAPED_STRING (267) 206
IDENTIFIER_1_0 (268) 82 95 96 97 170 195 231 232 241
VERSION (269) 61 102 113 119 189 219 234
UNTERM_STRING (270)
UNTERM_ESCAPED_STRING (271)
VERS_1_0 (272) 6
KW___no_header (273) 101
KW___row_length (274) 59 110
KW___untyped (275) 58 130
KW_alias (276) 50
KW_column (277) 136 137 138 139 156
KW_const (278) 47 48
KW_control (279) 84
KW_database (280) 219 231
KW_decode (281) 108
KW_default (282) 133 137 139 153
KW_encode (283) 109
KW_extern (284) 52 134
KW_false (285) 213
KW_fmtdef (286) 43 44
KW_function (287) 27 54
KW_include (288) 29
KW_limit (289) 138 139 151
KW_physical (290) 98 128 129 142
KW_read (291) 149 239
KW_readonly (292) 135
KW_return (293) 93
KW_schema (294) 26 27
KW_static (295) 127 129
KW_table (296) 112 232
KW_template (297) 230
KW_trigger (298) 97
KW_true (299) 212
KW_type (300) 67
KW_typedef (301) 30
KW_typeset (302) 35
KW_validate (303) 28 150
KW_version (304) 6 7
KW_view (305) 153
KW_virtual (306)
KW_void (307) 69
KW_write (308) 240


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
parse (75)
    on left: 1 2, on right: 0
source (76)
    on left: 3 4 5, on right: 2
version_1_0 (77)
    on left: 6, on right: 4
version_2_x (78)
    on left: 7, on right: 5
schema_2_x (79)
    on left: 8, on right: 5
schema_1_0 (80)
    on left: 9, on right: 3 4
schema_1_0_decl_seq (81)
    on left: 10 11, on right: 9 11
schema_1_0_decl (82)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25, on right: 10
    11
script_1_0_decl (83)
    on left: 26 27, on right: 19
validate_1_0_decl (84)
    on left: 28, on right: 20
include_directive (85)
    on left: 29, on right: 24
typedef_1_0_decl (86)
    on left: 30, on right: 12
typedef_1_0_new_name_list (87)
    on left: 31 32, on right: 30 32
typedef_1_0_new_name (88)
    on left: 33 34, on right: 31 32
typeset_1_0_decl (89)
    on left: 35, on right: 13
typeset_1_0_new_name (90)
    on left: 36, on right: 35
typeset_1_0_def (91)
    on left: 37, on right: 35
typespec_1_0_list (92)
    on left: 38 39, on right: 37 39
typespec_1_0 (93)
    on left: 40 41, on right: 38 39 82 140
typespec_1_0_name (94)
    on left: 42, on right: 40 41
format_1_0_decl (95)
    on left: 43 44, on right: 14
format_1_0_new_name (96)
    on left: 45, on right: 43 44
format_1_0_name (97)
    on left: 46, on right: 44
const_1_0_decl (98)
    on left: 47 48, on right: 15
const_1_0_new_name (99)
    on left: 49, on right: 47 48
alias_1_0_decl (100)
    on left: 50, on right: 16
alias_1_0_new_name (101)
    on left: 51, on right: 50
extern_1_0_decl (102)
    on left: 52, on right: 17
ext_func_1_0_decl (103)
    on left: 53, on right: 52
function_1_0_decl (104)
    on left: 54, on right: 18 28 53
func_1_0_decl (105)
    on left: 55 56 57, on right: 26 27 54
untyped_func_1_0_decl (106)
    on left: 58, on right: 55
row_length_func_1_0_decl (107)
    on left: 59, on right: 56
func_1_0_new_name (108)
    on left: 60 61, on right: 57 58 59
opt_func_1_0_schema_sig (109)
    on left: 62 63, on right: 57 99
func_1_0_schema_sig (110)
    on left: 64, on right: 63
func_1_0_schema_formals (111)
    on left: 65 66, on right: 64 66
func_1_0_schema_formal (112)
    on left: 67 68, on right: 65 66
func_1_0_return_type (113)
    on left: 69 70, on right: 57 100 101
opt_func_1_0_fact_sig (114)
    on left: 71 72, on right: 57 99
func_1_0_fact_sig (115)
    on left: 73, on right: 72
func_1_0_param_sig (116)
    on left: 74, on right: 57
func_1_0_param_signature (117)
    on left: 75 76 77 78 79, on right: 73 74
func_1_0_formal_params (118)
    on left: 80 81, on right: 76 77 78 79 81
formal_param_1_0 (119)
    on left: 82, on right: 80 81
opt_control_1_0 (120)
    on left: 83 84, on right: 82
func_1_0_vararg_formals (121)
    on left: 85 86, on right: 76 77 78 79
func_1_0_prologue (122)
    on left: 87 88 89, on right: 57
func_1_0_body (123)
    on left: 90, on right: 89 111
script_1_0_stmt_seq (124)
    on left: 91 92, on right: 90 92
script_1_0_stmt (125)
    on left: 93 94, on right: 91 92
production_1_0_stmt (126)
    on left: 95 96 97, on right: 94 123
physical_1_0_decl (127)
    on left: 98, on right: 21
phys_1_0_decl (128)
    on left: 99, on right: 98
phys_1_0_return_type (129)
    on left: 100 101, on right: 99
phys_1_0_new_name (130)
    on left: 102, on right: 99
phys_1_0_prologue (131)
    on left: 103 104, on right: 99
phys_1_0_body (132)
    on left: 105 106, on right: 104 106
phys_1_0_body_stmt (133)
    on left: 107 108 109 110, on right: 105 106
phys_1_0_stmt (134)
    on left: 111, on right: 103 108 109
table_1_0_decl (135)
    on left: 112, on right: 22
new_tbl_1_0_name (136)
    on left: 113, on right: 112
opt_tbl_1_0_parents (137)
    on left: 114 115, on right: 112
tbl_1_0_parents (138)
    on left: 116 117, on right: 115 117
tbl_1_0_parent (139)
    on left: 118 119, on right: 116 117
tbl_1_0_body (140)
    on left: 120, on right: 112
tbl_1_0_stmt_seq (141)
    on left: 121 122, on right: 120 122
tbl_1_0_stmt (142)
    on left: 123 124 125 126 127 128 129 130, on right: 121 122
col_1_0_modifier_seq (143)
    on left: 131 132, on right: 125 132
col_1_0_modifier (144)
    on left: 133 134 135, on right: 131 132
column_1_0_decl (145)
    on left: 136 137 138 139, on right: 124 125
col_1_0_decl (146)
    on left: 140, on right: 136 137
phys_encoding_expr_1_0 (147)
    on left: 141 142 143, on right: 140
typed_column_decl_1_0 (148)
    on left: 144 145 146, on right: 140
column_body_1_0 (149)
    on left: 147 148, on right: 144 148
column_stmt_1_0 (150)
    on left: 149 150 151 152, on right: 147 148
default_view_1_0_decl (151)
    on left: 153, on right: 126
physmbr_1_0_decl (152)
    on left: 154, on right: 127 128 129
opt_KW_column (153)
    on left: 155 156, on right: 154
phys_coldef_1_0 (154)
    on left: 157, on right: 154
opt_col_schema_parms_1_0 (155)
    on left: 158 159, on right: 157
col_schema_parms_1_0 (156)
    on left: 160 161, on right: 159 161
col_schema_parm_1_0 (157)
    on left: 162 163, on right: 160 161
col_schema_value_1_0 (158)
    on left: 164 165, on right: 162 163
untyped_tbl_expr_1_0 (159)
    on left: 166, on right: 130
expression_1_0 (160)
    on left: 167 168, on right: 47 48 138 139 145 168 179 194 195 198
    199 210 211 242 243 244
uncast_expr_1_0 (161)
    on left: 169 170 171 172 173 174 175 176 177 178 179, on right:
    167
assign_expr_1_0 (162)
    on left: 180, on right: 95 96 97
func_expr_1_0 (163)
    on left: 181 182, on right: 172
schema_parms_1_0 (164)
    on left: 183 184, on right: 142 143 181 184
schema_parm_1_0 (165)
    on left: 185 186 187, on right: 183 184
func_1_0_name (166)
    on left: 188 189, on right: 181 182
opt_factory_parms_1_0 (167)
    on left: 190 191, on right: 142 143 157 181 182
factory_parms_1_0 (168)
    on left: 192 193, on right: 191 193
factory_parm_1_0 (169)
    on left: 194 195, on right: 192 193
opt_func_1_0_parms (170)
    on left: 196 197, on right: 181 182
func_1_0_parms (171)
    on left: 198 199, on right: 197 199
uint_expr_1_0 (172)
    on left: 200 201 202, on right: 151 165 173 187 215
float_expr_1_0 (173)
    on left: 203 204, on right: 174 216
string_expr_1_0 (174)
    on left: 205 206, on right: 175
const_vect_expr_1_0 (175)
    on left: 207, on right: 176
opt_const_vect_exprlist_1_0 (176)
    on left: 208 209, on right: 207
const_vect_exprlist_1_0 (177)
    on left: 210 211, on right: 209 211
bool_expr_1_0 (178)
    on left: 212 213, on right: 177
negate_expr_1_0 (179)
    on left: 214 215 216, on right: 178
type_expr_1_0 (180)
    on left: 217 218, on right: 68 168 236
database_1_0_decl (181)
    on left: 219, on right: 23
opt_database_dad_1_0 (182)
    on left: 220 221, on right: 219
database_body_1_0 (183)
    on left: 222 223, on right: 219
database_members_1_0 (184)
    on left: 224 225, on right: 223 225
database_member_1_0 (185)
    on left: 226 227 228, on right: 224 225
opt_template_1_0 (186)
    on left: 229 230, on right: 226 227
db_member_1_0 (187)
    on left: 231, on right: 226
table_member_1_0 (188)
    on left: 232, on right: 227
opt_version_1_0 (189)
    on left: 233 234, on right: 142 143 157 221 231 232
vardim_type_expr_1_0 (190)
    on left: 235 236, on right: 70
fqn_1_0 (191)
    on left: 237 238 239 240, on right: 30 33 34 36 42 45 46 47 48
    49 50 51 60 61 88 95 96 102 110 113 118 119 157 162 164 166 169
    185 186 188 189 214 217 218 219 221 231 232 238 239 240
ident_1_0 (192)
    on left: 241, on right: 67 68 142 143 144 145 146 154 237 238
dim_1_0 (193)
    on left: 242, on right: 34 41 48
cond_expr_1_0 (194)
    on left: 243 244, on right: 93 149 150 154 180 244


State 0

    0 $accept: . parse "end of source"

    "end of source"  shift, and go to state 1
    KW_alias         shift, and go to state 2
    KW_const         shift, and go to state 3
    KW_database      shift, and go to state 4
    KW_extern        shift, and go to state 5
    KW_fmtdef        shift, and go to state 6
    KW_function      shift, and go to state 7
    KW_include       shift, and go to state 8
    KW_physical      shift, and go to state 9
    KW_schema        shift, and go to state 10
    KW_table         shift, and go to state 11
    KW_typedef       shift, and go to state 12
    KW_typeset       shift, and go to state 13
    KW_validate      shift, and go to state 14
    KW_version       shift, and go to state 15
    ';'              shift, and go to state 16

    parse                go to state 17
    source               go to state 18
    version_1_0          go to state 19
    version_2_x          go to state 20
    schema_1_0           go to state 21
    schema_1_0_decl_seq  go to state 22
    schema_1_0_decl      go to state 23
    script_1_0_decl      go to state 24
    validate_1_0_decl    go to state 25
    include_directive    go to state 26
    typedef_1_0_decl     go to state 27
    typeset_1_0_decl     go to state 28
    format_1_0_decl      go to state 29
    const_1_0_decl       go to state 30
    alias_1_0_decl       go to state 31
    extern_1_0_decl      go to state 32
    function_1_0_decl    go to state 33
    physical_1_0_decl    go to state 34
    table_1_0_decl       go to state 35
    database_1_0_decl    go to state 36


State 1

    1 parse: "end of source" .

    $default  reduce using rule 1 (parse)


State 2

   50 alias_1_0_decl: KW_alias . fqn_1_0 alias_1_0_new_name ';'

    IDENTIFIER_1_0  shift, and go to state 37

    fqn_1_0    go to state 38
    ident_1_0  go to state 39


State 3

   47 const_1_0_decl: KW_const . fqn_1_0 const_1_0_new_name '=' expression_1_0 ';'
   48               | KW_const . fqn_1_0 dim_1_0 const_1_0_new_name '=' expression_1_0 ';'

    IDENTIFIER_1_0  shift, and go to state 37

    fqn_1_0    go to state 40
    ident_1_0  go to state 39


State 4

  219 database_1_0_decl: KW_database . fqn_1_0 VERSION opt_database_dad_1_0 database_body_1_0

    IDENTIFIER_1_0  shift, and go to state 37

    fqn_1_0    go to state 41
    ident_1_0  go to state 39


State 5

   52 extern_1_0_decl: KW_extern . ext_func_1_0_decl

    KW_function  shift, and go to state 7

    ext_func_1_0_decl  go to state 42
    function_1_0_decl  go to state 43


State 6

   43 format_1_0_decl: KW_fmtdef . format_1_0_new_name ';'
   44                | KW_fmtdef . format_1_0_name format_1_0_new_name ';'

    IDENTIFIER_1_0  shift, and go to state 37

    format_1_0_new_name  go to state 44
    format_1_0_name      go to state 45
    fqn_1_0              go to state 46
    ident_1_0            go to state 39


State 7

   54 function_1_0_decl: KW_function . func_1_0_decl ';'

    KW___row_length  shift, and go to state 47
    KW___untyped     shift, and go to state 48
    '<'              shift, and go to state 49

    $default  reduce using rule 62 (opt_func_1_0_schema_sig)

    func_1_0_decl             go to state 50
    untyped_func_1_0_decl     go to state 51
    row_length_func_1_0_decl  go to state 52
    opt_func_1_0_schema_sig   go to state 53
    func_1_0_schema_sig       go to state 54


State 8

   29 include_directive: KW_include . STRING

    STRING  shift, and go to state 55


State 9

   98 physical_1_0_decl: KW_physical . phys_1_0_decl

    '<'  shift, and go to state 49

    $default  reduce using rule 62 (opt_func_1_0_schema_sig)

    opt_func_1_0_schema_sig  go to state 56
    func_1_0_schema_sig      go to state 54
    phys_1_0_decl            go to state 57


State 10

   26 script_1_0_decl: KW_schema . func_1_0_decl
   27                | KW_schema . KW_function func_1_0_decl

    KW___row_length  shift, and go to state 47
    KW___untyped     shift, and go to state 48
    KW_function      shift, and go to state 58
    '<'              shift, and go to state 49

    $default  reduce using rule 62 (opt_func_1_0_schema_sig)

    func_1_0_decl             go to state 59
    untyped_func_1_0_decl     go to state 51
    row_length_func_1_0_decl  go to state 52
    opt_func_1_0_schema_sig   go to state 53
    func_1_0_schema_sig       go to state 54


State 11

  112 table_1_0_decl: KW_table . new_tbl_1_0_name opt_tbl_1_0_parents tbl_1_0_body

    IDENTIFIER_1_0  shift, and go to state 37

    new_tbl_1_0_name  go to state 60
    fqn_1_0           go to state 61
    ident_1_0         go to state 39


State 12

   30 typedef_1_0_decl: KW_typedef . fqn_1_0 typedef_1_0_new_name_list ';'

    IDENTIFIER_1_0  shift, and go to state 37

    fqn_1_0    go to state 62
    ident_1_0  go to state 39


State 13

   35 typeset_1_0_decl: KW_typeset . typeset_1_0_new_name typeset_1_0_def ';'

    IDENTIFIER_1_0  shift, and go to state 37

    typeset_1_0_new_name  go to state 63
    fqn_1_0               go to state 64
    ident_1_0             go to state 39


State 14

   28 validate_1_0_decl: KW_validate . function_1_0_decl

    KW_function  shift, and go to state 7

    function_1_0_decl  go to state 65


State 15

    6 version_1_0: KW_version . VERS_1_0 ';'
    7 version_2_x: KW_version . FLOAT ';'

    FLOAT     shift, and go to state 66
    VERS_1_0  shift, and go to state 67


State 16

   25 schema_1_0_decl: ';' .

    $default  reduce using rule 25 (schema_1_0_decl)


State 17

    0 $accept: parse . "end of source"

    "end of source"  shift, and go to state 68


State 18

    2 parse: source . "end of source"

    "end of source"  shift, and go to state 69


State 19

    4 source: version_1_0 . schema_1_0

    KW_alias     shift, and go to state 2
    KW_const     shift, and go to state 3
    KW_database  shift, and go to state 4
    KW_extern    shift, and go to state 5
    KW_fmtdef    shift, and go to state 6
    KW_function  shift, and go to state 7
    KW_include   shift, and go to state 8
    KW_physical  shift, and go to state 9
    KW_schema    shift, and go to state 10
    KW_table     shift, and go to state 11
    KW_typedef   shift, and go to state 12
    KW_typeset   shift, and go to state 13
    KW_validate  shift, and go to state 14
    ';'          shift, and go to state 16

    schema_1_0           go to state 70
    schema_1_0_decl_seq  go to state 22
    schema_1_0_decl      go to state 23
    script_1_0_decl      go to state 24
    validate_1_0_decl    go to state 25
    include_directive    go to state 26
    typedef_1_0_decl     go to state 27
    typeset_1_0_decl     go to state 28
    format_1_0_decl      go to state 29
    const_1_0_decl       go to state 30
    alias_1_0_decl       go to state 31
    extern_1_0_decl      go to state 32
    function_1_0_decl    go to state 33
    physical_1_0_decl    go to state 34
    table_1_0_decl       go to state 35
    database_1_0_decl    go to state 36


State 20

    5 source: version_2_x . schema_2_x

    '$'  shift, and go to state 71

    schema_2_x  go to state 72


State 21

    3 source: schema_1_0 .

    $default  reduce using rule 3 (source)


State 22

    9 schema_1_0: schema_1_0_decl_seq .
   11 schema_1_0_decl_seq: schema_1_0_decl_seq . schema_1_0_decl

    KW_alias     shift, and go to state 2
    KW_const     shift, and go to state 3
    KW_database  shift, and go to state 4
    KW_extern    shift, and go to state 5
    KW_fmtdef    shift, and go to state 6
    KW_function  shift, and go to state 7
    KW_include   shift, and go to state 8
    KW_physical  shift, and go to state 9
    KW_schema    shift, and go to state 10
    KW_table     shift, and go to state 11
    KW_typedef   shift, and go to state 12
    KW_typeset   shift, and go to state 13
    KW_validate  shift, and go to state 14
    ';'          shift, and go to state 16

    $default  reduce using rule 9 (schema_1_0)

    schema_1_0_decl    go to state 73
    script_1_0_decl    go to state 24
    validate_1_0_decl  go to state 25
    include_directive  go to state 26
    typedef_1_0_decl   go to state 27
    typeset_1_0_decl   go to state 28
    format_1_0_decl    go to state 29
    const_1_0_decl     go to state 30
    alias_1_0_decl     go to state 31
    extern_1_0_decl    go to state 32
    function_1_0_decl  go to state 33
    physical_1_0_decl  go to state 34
    table_1_0_decl     go to state 35
    database_1_0_decl  go to state 36


State 23
